fix: #32 - Map key values were not showing.

--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,6 @@ a,a:visited {
     font-size: 1.5em;
 }
 
-.tree-view {
-    /* override hidden to allow the tooltip to show */
-    overflow-y: visible !important;
-}
-
 /* Tooltiped Text */
 .tooltipedText {
     position: relative;
@@ -232,6 +227,13 @@ a,a:visited {
     display: inline-block;
 }
 
-.propertiesViewer .object > .value, .propertiesViewer .array > .value {
+.propertiesViewer .object {
+    display: flex;
+}
+.propertiesViewer .object > .value {
+    padding-left: 3px;
+}
+
+.propertiesViewer .array > .value {
     padding-left: 7px;
 }
